@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.architecture;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.ARCHITECTURE)
+import static com.kustacks.kuring.notice.domain.DepartmentName.ARCHITECTURE;
+
+@RegisterDepartmentMap(key = ARCHITECTURE)
 public class ArchitectureDept extends ArchitectureCollege {
 
     public ArchitectureDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class ArchitectureDept extends ArchitectureCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("11830", "17940");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("700");
-        List<String> menuSeqs = List.of("5168");
-
+        List<String> professorForumIds = List.of("9815");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "CAKU", boardSeqs, menuSeqs);
-        this.code = "127320";
-        this.departmentName = DepartmentName.ARCHITECTURE;
+        this.noticeScrapInfo = new NoticeScrapInfo(ARCHITECTURE.getHostPrefix(), 397);
+        this.departmentName = ARCHITECTURE;
     }
 }
