@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.art_design;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.APPAREL_DESIGN)
+import static com.kustacks.kuring.notice.domain.DepartmentName.APPAREL_DESIGN;
+
+@RegisterDepartmentMap(key = APPAREL_DESIGN)
 public class ApparelDesignDept extends ArtDesignCollege {
 
     public ApparelDesignDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class ApparelDesignDept extends ArtDesignCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("9723");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("1007");
-        List<String> menuSeqs = List.of("6987");
-
+        List<String> professorForumIds = List.of("11194");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "APPAREL", boardSeqs, menuSeqs);
-        this.code = "122404";
-        this.departmentName = DepartmentName.APPAREL_DESIGN;
+        this.noticeScrapInfo = new NoticeScrapInfo(APPAREL_DESIGN.getHostPrefix(), 956);
+        this.departmentName = APPAREL_DESIGN;
     }
 }
