@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.art_design;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.MOV_IMAGE)
+import static com.kustacks.kuring.notice.domain.DepartmentName.MOV_IMAGE;
+
+@RegisterDepartmentMap(key = MOV_IMAGE)
 public class MovingImageFilmDept extends ArtDesignCollege {
 
     public MovingImageFilmDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class MovingImageFilmDept extends ArtDesignCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("15032480");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("580");
-        List<String> menuSeqs = List.of("4508");
-
+        List<String> professorForumIds = List.of("11263");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "MOVINGIMAGES", boardSeqs, menuSeqs);
-        this.code = "127128";
-        this.departmentName = DepartmentName.MOV_IMAGE;
+        this.noticeScrapInfo = new NoticeScrapInfo(MOV_IMAGE.getHostPrefix(), 491);
+        this.departmentName = MOV_IMAGE;
     }
 }
