@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.education;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.MATH_EDU)
+import static com.kustacks.kuring.notice.domain.DepartmentName.MATH_EDU;
+
+@RegisterDepartmentMap(key = MATH_EDU)
 public class MathematicsEducationDept extends EducationCollege {
 
     public MathematicsEducationDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class MathematicsEducationDept extends EducationCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("4037");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("1105");
-        List<String> menuSeqs = List.of("7747");
-
+        List<String> professorForumIds = List.of("11335");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "MATHEDU", boardSeqs, menuSeqs);
-        this.code = "104991";
-        this.departmentName = DepartmentName.MATH_EDU;
+        this.noticeScrapInfo = new NoticeScrapInfo(MATH_EDU.getHostPrefix(), 499);
+        this.departmentName = MATH_EDU;
     }
 }
