@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.engineering;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.BIOLOGICAL)
+import static com.kustacks.kuring.notice.domain.DepartmentName.BIOLOGICAL;
+
+@RegisterDepartmentMap(key = BIOLOGICAL)
 public class BiologicalDept extends EngineeringCollege {
 
     public BiologicalDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class BiologicalDept extends EngineeringCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("7849");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("1131");
-        List<String> menuSeqs = List.of("7888");
-
+        List<String> professorForumIds = List.of("10097");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "MICROBIO", boardSeqs, menuSeqs);
-        this.code = "122055";
-        this.departmentName = DepartmentName.BIOLOGICAL;
+        this.noticeScrapInfo = new NoticeScrapInfo(BIOLOGICAL.getHostPrefix(), 790);
+        this.departmentName = BIOLOGICAL;
     }
 }
