@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.ku_integrated_science;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.COSMETICS)
+import static com.kustacks.kuring.notice.domain.DepartmentName.COSMETICS;
+
+@RegisterDepartmentMap(key = COSMETICS)
 public class CosmeticsDept extends KuIntegratedScienceCollege {
 
     public CosmeticsDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class CosmeticsDept extends KuIntegratedScienceCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("15623085");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("297");
-        List<String> menuSeqs = List.of("2251");
-
+        List<String> professorForumIds = List.of("15930");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "COSMETICS", boardSeqs, menuSeqs);
-        this.code = "126916";
-        this.departmentName = DepartmentName.COSMETICS;
+        this.noticeScrapInfo = new NoticeScrapInfo(COSMETICS.getHostPrefix(), 457);
+        this.departmentName = COSMETICS;
     }
 }
