@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.liberal_art;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.MEDIA_COMM)
+import static com.kustacks.kuring.notice.domain.DepartmentName.MEDIA_COMM;
+
+@RegisterDepartmentMap(key = MEDIA_COMM)
 public class MediaCommunicationDept extends LiberalArtCollege {
 
     public MediaCommunicationDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class MediaCommunicationDept extends LiberalArtCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("11939245");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("1043");
-        List<String> menuSeqs = List.of("7275");
-
+        List<String> professorForumIds = List.of("7879");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "COMM", boardSeqs, menuSeqs);
-        this.code = "122281";
-        this.departmentName = DepartmentName.MEDIA_COMM;
+        this.noticeScrapInfo = new NoticeScrapInfo(MEDIA_COMM.getHostPrefix(), 375);
+        this.departmentName = MEDIA_COMM;
     }
 }
