@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.sanghuo_biology;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.FOOD_MARKETING)
+import static com.kustacks.kuring.notice.domain.DepartmentName.FOOD_MARKETING;
+
+@RegisterDepartmentMap(key = FOOD_MARKETING)
 public class FoodMarketingSafetyDept extends SanghuoBiologyCollege {
 
     public FoodMarketingSafetyDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class FoodMarketingSafetyDept extends SanghuoBiologyCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("15827578");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("262");
-        List<String> menuSeqs = List.of("2004");
-
+        List<String> professorForumIds = List.of("11029");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "KUFSM", boardSeqs, menuSeqs);
-        this.code = "126910";
-        this.departmentName = DepartmentName.FOOD_MARKETING;
+        this.noticeScrapInfo = new NoticeScrapInfo(FOOD_MARKETING.getHostPrefix(), 929);
+        this.departmentName = FOOD_MARKETING;
     }
 }
