@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.sanghuo_biology;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.FORESTRY_LANDSCAPE_ARCH)
+import static com.kustacks.kuring.notice.domain.DepartmentName.FORESTRY_LANDSCAPE_ARCH;
+
+@RegisterDepartmentMap(key = FORESTRY_LANDSCAPE_ARCH)
 public class ForestryLandscapeArchitectureDept extends SanghuoBiologyCollege {
 
     public ForestryLandscapeArchitectureDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class ForestryLandscapeArchitectureDept extends SanghuoBiologyCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("15766919");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("413");
-        List<String> menuSeqs = List.of("2729");
-
+        List<String> professorForumIds = List.of("11103");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "FLA", boardSeqs, menuSeqs);
-        this.code = "126912";
-        this.departmentName = DepartmentName.FORESTRY_LANDSCAPE_ARCH;
+        this.noticeScrapInfo = new NoticeScrapInfo(FORESTRY_LANDSCAPE_ARCH.getHostPrefix(), 479);
+        this.departmentName = FORESTRY_LANDSCAPE_ARCH;
     }
 }
